# gaml

./: .travis.yml  Dockerfile  README.md  dummy.travis
doc/gaml-kvq/: a00001.html  a00002.html  a00002.html.rpmorig  a00002_source.html  a00003.html  a00004.html  a00004_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  examples.html  files.html  index.html
doc/gaml-libsvm/: annotated.html  annotated.html.rpmsave  classes.html  classes.html.rpmsave  classgaml_1_1libsvm_1_1Learner-members.html  classgaml_1_1libsvm_1_1Learner-members.html.rpmsave  classgaml_1_1libsvm_1_1Learner.html  classgaml_1_1libsvm_1_1Learner.html.rpmsave  classgaml_1_1libsvm_1_1Predictor-members.html  classgaml_1_1libsvm_1_1Predictor-members.html.rpmsave  classgaml_1_1libsvm_1_1Predictor.html  classgaml_1_1libsvm_1_1Predictor.html.rpmsave  classgaml_1_1libsvm_1_1exception_1_1BadFile-members.html  classgaml_1_1libsvm_1_1exception_1_1BadFile-members.html.rpmsave  classgaml_1_1libsvm_1_1exception_1_1BadFile.html  classgaml_1_1libsvm_1_1exception_1_1BadFile.html.rpmsave  classgaml_1_1libsvm_1_1exception_1_1BadPredictor-members.html  classgaml_1_1libsvm_1_1exception_1_1BadPredictor-members.html.rpmsave  classgaml_1_1libsvm_1_1exception_1_1BadPredictor.html  classgaml_1_1libsvm_1_1exception_1_1BadPredictor.html.rpmsave  classgaml_1_1libsvm_1_1exception_1_1Parameters-members.html  classgaml_1_1libsvm_1_1exception_1_1Parameters-members.html.rpmsave  classgaml_1_1libsvm_1_1exception_1_1Parameters.html  classgaml_1_1libsvm_1_1exception_1_1Parameters.html.rpmsave  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html.rpmsave  example-001-basics_8cpp-example.html  example-001-basics_8cpp-example.html.rpmsave  example-002-unsupervized_8cpp-example.html  example-002-unsupervized_8cpp-example.html.rpmsave  example-003-3D_8cpp-example.html  examples.html  (+75 more)
gaml/: CMakeLists.txt  INSTALL  LICENSE  README.md
gaml-datasets/: CMakeLists.txt  notes
gaml-kvq/: CMakeLists.txt
gaml-kvq/src/: CMakeLists.txt  gaml-kvq.hpp
gaml-libsvm/: CMakeLists.txt  INSTALL  LICENSE
gaml-libsvm/examples/: CMakeLists.txt  example-001-basics.cpp  example-002-unsupervized.cpp  example-003-3D.cpp  example-004-grid-search.cpp
gaml-linear/: CMakeLists.txt
gaml-linear/share/: CMakeLists.txt  diabetes.data  diabetes.sdata.txt
gaml-mlp/: CMakeLists.txt  todo
gaml-mlp/examples/: CMakeLists.txt  example-001-basics.cpp  example-002-train-ukf.cpp  example-003-real-risk.cpp  example-004-ukf-classification.cpp  example-005-test-gradient.cpp  example-005-train-gradient.cpp  example-006-gradient-classification.cpp
gaml-xtree/: CMakeLists.txt
gaml/examples/: CMakeLists.txt  example-000-000-overview.cpp  example-001-001-JSON-parser.cpp  example-001-001-handcrafted-parser.cpp  example-001-001-parser.cpp  example-001-002-indexed-dataset.cpp  example-001-003-set-manipulations.cpp  example-001-004-span.cpp  example-001-005-tree.cpp  example-001-005-virtualization.cpp  example-001-006-score.cpp  example-001-007-score.cpp  example-002-001-confusion.cpp  example-002-002-roc.cpp  example-002-003-cross-validation.cpp  example-002-004-bootstrapping.cpp  example-002-005-bagging.cpp  example-002-006-scorer.cpp  example-003-001-multidimension.cpp  example-003-002-multiclass.cpp  example-004-001-variable-projection.cpp  example-004-002-filter-based-selection.cpp  example-004-003-wrapper-based-selection.cpp  example-005-students.cpp  example-999-001-test-virtual-tabular.cpp  example-customer.hpp  example-dummy.hpp  example-ratio.hpp  example-scorer.hpp  example-silly.hpp
(+2504 files in other folders)
